[package]
name = "hello"
version = "0.1.0"
edition = "2021"

[dependencies]
[[bin]]
name = "linked_list"
path = "src/linked_list.rs"

[[bin]]
name="b_tree_map"
path="src/b_tree_map.rs"

[[bin]]
name="iterators"
path="src/iterators.rs"

[[bin]]
name="thread"
path="src/thread.rs"


[[bin]]
name="channel"
path="src/channel.rs"

[[bin]]
name="channel_sort_example"
path="src/channel_sort_example.rs"

